Source/WebCore/dom/ScriptedAnimationController.cpp
@@ -72,7 +72,11 @@ void ScriptedAnimationController::suspend()
 
 void ScriptedAnimationController::resume()
 {
-    --m_suspendCount;
+    // It would be nice to put an ASSERT(m_suspendCount > 0) here, but in WK1 resume() can be called
+    // even when suspend hasn't (if a tab was created in the background).
+    if (m_suspendCount > 0)
+        --m_suspendCount;
+
     if (!m_suspendCount && m_callbacks.size())
         scheduleAnimation();
 }
